<resources>
    <string name="app_name">GerenciadorDoceria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_produto">Produtos</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">"Register"</string>
    <!-- begin of home variables -->
    <string name="select">"Select Item"</string>
    <string-array name="produtos">
        <item>Chocolate</item>
        <item>Cookie</item>
        <item>Brownie</item>
        <item>Bolo</item>
        <item>Bolo de pote</item>
        <item>Cheesecake</item>
    </string-array>
    <!-- end of home variables  -->


</resources>