<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gerenciadordoceria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gerenciadordoceria.ui.gallery.ProdutosFragment"
        android:label="@string/menu_produto"
        tools:layout="@layout/fragment_produtos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gerenciadordoceria.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.gerenciadordoceria.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registry_fragment"
        android:name="com.example.gerenciadordoceria.RegistryFragment"
        android:label="fragment_registry"
        tools:layout="@layout/fragment_registry" />
</navigation>